fix: Update theme definition and scrollbar styles for improved UI consistency

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 body {
-    background: #EEAECA;
+    
     background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
     margin: 0%;
     padding: 0%;
@@ -61,15 +61,16 @@ pre {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #000000;
+    background: #9bb9e6;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #9bb9e6;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #9bb9e6;
 }
+
